init： 聊天室
