# docs/swagger.json
@@ -4,18 +4,417 @@
         "contact": {}
     },
     "paths": {
-        "/index": {
+        "/user/createUser": {
             "get": {
                 "tags": [
-                    "首页"
+                    "用户模块"
+                ],
+                "summary": "新增用户",
+                "parameters": [
+                    {
+                        "description": "创建",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structure.AddUserBasicInfo"
+                        }
+                    }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/structure.Id"
                         }
                     }
+                }
+            }
+        },
+        "/user/deleteUser": {
+            "get": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "删除用户",
+                "parameters": [
+                    {
+                        "description": "刪除",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structure.Id"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structure.Id"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/getUserList": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "所有用户",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页大小",
+                        "name": "size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "名字",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "邮箱",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "加盐",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "身份",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "客户端ip",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "客户端端口",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "登录时间",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "心跳时间",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "登出时间",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "是否登出",
+                        "name": "code",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "设备信息",
+                        "name": "code",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/structure.UserBasicInfo"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/updateUser": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "修改用户",
+                "parameters": [
+                    {
+                        "description": "更新",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/structure.UpdateUserBasicInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structure.Id"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "structure.AddUserBasicInfo": {
+            "type": "object",
+            "properties": {
+                "client_ip": {
+                    "description": "客户端ip",
+                    "type": "string"
+                },
+                "client_port": {
+                    "description": "客户端端口",
+                    "type": "string"
+                },
+                "device_info": {
+                    "description": "设备信息",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "heartbeat_time": {
+                    "description": "心跳时间",
+                    "type": "string"
+                },
+                "identity": {
+                    "description": "身份",
+                    "type": "string"
+                },
+                "is_logout": {
+                    "description": "是否登出",
+                    "type": "integer"
+                },
+                "login_out_time": {
+                    "description": "登出时间",
+                    "type": "string"
+                },
+                "login_time": {
+                    "description": "登录时间",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "名字",
+                    "type": "string"
+                },
+                "pass_word": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "re_password": {
+                    "description": "确认密码",
+                    "type": "string"
+                },
+                "salt": {
+                    "description": "加盐",
+                    "type": "string"
+                }
+            }
+        },
+        "structure.Id": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "ids": {
+                    "type": "string"
+                }
+            }
+        },
+        "structure.UpdateUserBasicInfo": {
+            "type": "object",
+            "properties": {
+                "client_ip": {
+                    "description": "客户端ip",
+                    "type": "string"
+                },
+                "client_port": {
+                    "description": "客户端端口",
+                    "type": "string"
+                },
+                "device_info": {
+                    "description": "设备信息",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "heartbeat_time": {
+                    "description": "心跳时间",
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "identity": {
+                    "description": "身份",
+                    "type": "string"
+                },
+                "is_logout": {
+                    "description": "是否登出",
+                    "type": "integer"
+                },
+                "login_out_time": {
+                    "description": "登出时间",
+                    "type": "string"
+                },
+                "login_time": {
+                    "description": "登录时间",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "名字",
+                    "type": "string"
+                },
+                "pass_word": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "salt": {
+                    "description": "加盐",
+                    "type": "string"
+                }
+            }
+        },
+        "structure.UserBasicInfo": {
+            "type": "object",
+            "properties": {
+                "client_ip": {
+                    "description": "客户端ip",
+                    "type": "string"
+                },
+                "client_port": {
+                    "description": "客户端端口",
+                    "type": "string"
+                },
+                "created_at": {
+                    "description": "创建时间",
+                    "type": "string"
+                },
+                "creator_id": {
+                    "description": "创建人id",
+                    "type": "integer"
+                },
+                "creator_name": {
+                    "description": "创建人名称",
+                    "type": "string"
+                },
+                "device_info": {
+                    "description": "设备信息",
+                    "type": "string"
+                },
+                "email": {
+                    "description": "邮箱",
+                    "type": "string"
+                },
+                "heartbeat_time": {
+                    "description": "心跳时间",
+                    "type": "string"
+                },
+                "id": {
+                    "description": "id",
+                    "type": "integer"
+                },
+                "identity": {
+                    "description": "身份",
+                    "type": "string"
+                },
+                "is_logout": {
+                    "description": "是否登出",
+                    "type": "integer"
+                },
+                "login_out_time": {
+                    "description": "登出时间",
+                    "type": "string"
+                },
+                "login_time": {
+                    "description": "登录时间",
+                    "type": "string"
+                },
+                "name": {
+                    "description": "名字",
+                    "type": "string"
+                },
+                "pass_word": {
+                    "description": "密码",
+                    "type": "string"
+                },
+                "phone": {
+                    "description": "手机号",
+                    "type": "string"
+                },
+                "salt": {
+                    "description": "加盐",
+                    "type": "string"
+                },
+                "updated_at": {
+                    "description": "更新时间",
+                    "type": "string"
+                },
+                "updater_id": {
+                    "description": "更新人id",
+                    "type": "integer"
+                },
+                "updater_name": {
+                    "description": "更新人名称",
+                    "type": "string"
                 }
             }
         }
